add provisioner to .gitignore

--- a/workdir/stabilizer.properties
+++ b/workdir/stabilizer.properties
@@ -9,8 +9,11 @@ CLOUD_PROVIDER=aws-ec2
 CLOUD_IDENTITY=~/ec2.identity
 # The file containing your aws identity
 CLOUD_CREDENTIAL=~/ec2.credential
-MACHINE_SPEC=hardwareId=m3.medium,locationId=us-east-1,imageId=us-east-1/ami-fb8e9292
+MACHINE_SPEC=hardwareId=c3.xlarge,locationId=us-east-1,imageId=us-east-1/ami-7c807d14
+GROUP_NAME=aa-stabilizer-agent
+#SECURITY_GROUP=hazelcast
 JDK_FLAVOR=oracle
 JDK_VERSION=7
 PROFILER=none
-HAZELCAST_VERSION_SPEC=outofthebox
+HAZELCAST_VERSION_SPEC=maven=3.2.3
+#HAZELCAST_VERSION_SPEC=outofthebox
