--- a/conf/test.properties
+++ b/conf/test.properties
@@ -1,4 +1,4 @@
-class=yourgroupid.ExampleTest
+class=yourgroupid.MapTransactionTest
 threadCount=1
 logFrequency=10000
 performanceUpdateFrequency=10000
