--- a/workdir/stabilizer.properties
+++ b/workdir/stabilizer.properties
@@ -15,5 +15,5 @@ SECURITY_GROUP=hazelcast
 JDK_FLAVOR=oracle
 JDK_VERSION=7
 PROFILER=none
-HAZELCAST_VERSION_SPEC=maven=3.3-RC2
+HAZELCAST_VERSION_SPEC=maven=3.3-RC4-SNAPSHOT
 #HAZELCAST_VERSION_SPEC=outofthebox
