--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <url>http://www.myorganization.org</url>
 
     <properties>
-        <hazelcast.version>3.3-RC2</hazelcast.version>
+        <hazelcast.version>3.3-RC4-SNAPSHOT</hazelcast.version>
         <hazelcast-stabilizer.version>0.3-SNAPSHOT</hazelcast-stabilizer.version>
         <java.version>1.6</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
