--- a/workdir/stabilizer.properties
+++ b/workdir/stabilizer.properties
@@ -9,7 +9,8 @@ CLOUD_PROVIDER=aws-ec2
 CLOUD_IDENTITY=~/ec2.identity
 # The file containing your aws identity
 CLOUD_CREDENTIAL=~/ec2.credential
-MACHINE_SPEC=hardwareId=c3.xlarge,locationId=us-east-1,imageId=us-east-1/ami-7c807d14
+#MACHINE_SPEC=hardwareId=c3.xlarge,locationId=us-east-1,imageId=us-east-1/ami-7c807d14
+MACHINE_SPEC=hardwareId=c3.2xlarge,locationId=us-east-1,imageId=us-east-1/ami-1b3b2472
 GROUP_NAME=ag-stabilizer-agent
 SECURITY_GROUP=hazelcast
 JDK_FLAVOR=oracle
